<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_activity_sign_in"
    tools:context=".users.view.SignInActivity">

    <EditText
        android:id="@+id/sign_in_et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_in_et_contra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/label_contra"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_et_email" />

    <EditText
        android:id="@+id/sign_in_et_confirmar_contra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/label_confirmar_contra"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_et_contra" />

    <EditText
        android:id="@+id/sign_in_et_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/label_nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_et_confirmar_contra" />

    <EditText
        android:id="@+id/sign_in_et_apellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/label_apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_et_nombre" />

    <Button
        android:id="@+id/btn_crear_cuenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="10dp"
        android:text="@string/btn_crear_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_et_apellido" />

    <ProgressBar
        android:id="@+id/pg_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_crear_cuenta" />

</androidx.constraintlayout.widget.ConstraintLayout>